yayyy done but no design yet

--- a/3QPortfolioLiNovales/Q3_2GLithiumNovales.html
+++ b/3QPortfolioLiNovales/Q3_2GLithiumNovales.html
@@ -58,4 +58,12 @@
                 </select>
             </label></br></br>
         </fieldset>
+        <label>
+            Why do you want to join?
+            <br>
+      <textarea name="reason" rows="4" cols="40" required></textarea>
+    </label><br><br>
+        <button type="submit">Submit</button>
+        <button type="reset">Reset</button>
+
     </form>
