changes to webpage

--- a/index.html
+++ b/index.html
@@ -8,7 +8,44 @@
   <meta name="author" content="NOVALES, Emma Tianlan Z.">
   <title>2Q Portfolio - Emma Novales</title>
 
-  <!-- Favicon -->
+  <title>My File Hub</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f4f4f4;
+      text-align: center;
+      padding: 40px;
+    }
+
+    h1 {
+      margin-bottom: 30px;
+    }
+
+    .file-container {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 20px;
+      max-width: 700px;
+      margin: auto;
+    }
+
+    .file-btn {
+      display: block;
+      padding: 15px;
+      background-color: #4a90e2;
+      color: white;
+      text-decoration: none;
+      border-radius: 8px;
+      font-size: 16px;
+      transition: 0.2s;
+    }
+
+    .file-btn:hover {
+      background-color: #357abd;
+    }
+  </style>
+</head>
+<!-- Favicon -->
   <link rel="icon" href="https://emmanovales.github.io/assets/columbina(1).jpg" type="image/jpg">
 
   <!-- W3.CSS Library -->
@@ -21,20 +58,21 @@
     <header>
       <div> 
         <img src="https://emmanovales.github.io/assets/columbina(1).jpg" alt="Columbina" title="Columbina" width="50">
-        <h1>Columbina</h1>
       </div>
     </header>
+<body>
 
-    <nav>
-      <a href="2QPortfolioLiNovales/public/2Q1GLithiumNovales.html" style="font-size: 20px; color: #000000;">First Graded</a><br>
-      <a href="2QPortfolioLiNovales/Q21NGLithiumNovales.html" style="font-size: 20px; color: #000000;">First Non Graded</a><br>
-      <a href="2QPortfolioLiNovales/public/2Q1GLithiumNovales.html" style="font-size: 20px; color: #000000;">Second Graded</a><br>
-      <a href="#" style="font-size: 20px; color: #000000;">Third Graded</a><br>
-      <a href="#" style="font-size: 20px; color: #000000;">Fourth Graded</a><br>
-    </nav>
+    <h1>My Second to Fourth Quarter Requirements</h1>
+  <p>Emma Tianlan Z. Novales</p>
+  </br>
 
-    <img src="https://emmanovales.github.io/assets/columbina(1).jpg" alt="Columbina" width="300" height="300">
-  </section>
+  <div class="file-container">
+
+    <a href="../2QPortfolioLiNovales/" class="file-btn">Q2 Requirements</a>
+    <a href="../3QPortfolioLiNovales/" class="file-btn">Q3 Requirements</a>
+    <a href="placeholder.pngS" class="file-btn">Q4 Requirements</a>
+
+  </div>
 
 </body>
 </html>
