--- a/index.html
+++ b/index.html
@@ -67,10 +67,18 @@
   </br>
 
   <div class="file-container">
-
-    <a href="../2QPortfolioLiNovales/" class="file-btn">Q2 Requirements</a>
-    <a href="../3QPortfolioLiNovales/" class="file-btn">Q3 Requirements</a>
-    <a href="placeholder.pngS" class="file-btn">Q4 Requirements</a>
+    <p><strong>Second Quarter</strong></p>
+    </div>
+  <div class="Q2">
+        <a class="file-btn" href="2QPortfolioLiNovales/public/2Q1GLithiumNovales.html" target="_blank">First Graded</a>
+        </div>
+        <a class="file-btn" href="2QPortfolioLiNovales/public/Q21NGLithiumNovales.html" target="_blank">Second Non Graded</a>
+        </div>
+      <p><strong>Third Quarter</strong></p>
+  <div class="Q3">
+        <a class="file-btn" href="3QPortfolioLiNovales/public/Q3_2GLithiumNovales.html" target="_blank">Second Graded</a>
+  </div>
+  
 
   </div>
 
