--- a/3QPortfolioLiNovales/public/Q3_2GLithiumNovales.html
+++ b/3QPortfolioLiNovales/public/Q3_2GLithiumNovales.html
@@ -10,30 +10,91 @@
     <link rel="stylesheet" href="../../styles.css" />
     <link rel="icon" href="/SY25-26PortfolioLiNovales/2QPortfolioLiNovales/assets/catmeme1.webp" sizes="32x32" type="image/png">
     <script src="script.js" defer></script>
-  </head>
+    <style>
+    body {
+        font-family: Arial, sans-serif;
+        background-color: #ffdcdc;
+        padding: 20px;
+        background-image: url('image.png');
+    }
+    .form-container {
+        background-color: #fefee6;
+        padding: 20px;
+        border-radius: 20px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        max-width: 600px;
+        margin: auto;
+    }
+    .title {
+        text-align: center;
+        color: #de868d;
+    }
+    label {
+        display: block;
+        margin-bottom: 10px;
+        color: #78abef;
+    }
+    input[type="text"],
+    input[type="numeric"],
+    input[type="date"],
+    input[type="email"],
+    input[type="tel"],
+    select,
+    textarea {
+        width: 100%;
+        padding: 8px;
+        border: 1px solid #6d7eb6;
+        border-radius: 5px;
+        box-sizing: border-box;
+    }
+
+    button {
+        background-color: #fcbad5;
+        color: rgb(255, 255, 255);
+        padding: 10px 20px;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+    }
+
+    button:hover {
+        background-color: #bd8096;
+    }
+    .rounded fieldset {
+        border-radius: 20px;
+        padding: 10px;
+        border: 1px solid #ccc;
+        margin-bottom: 20px;
+    }
+</style>
+</head>
 </html>
 
 <body>
+    <div class="form-container">
     <h1 class="title">Club Application Form</h1>
     <form id="dForm" action="register.html" method="get">
-        <fieldset>
+        <fieldset class="rounded">
+        </br>
             <label>Student ID : 
                 <input type="numeric" name="studentid" id="studentid" required/>
-            </label></br></br>
+            </label></br>
             <label>Full Name : 
                 <input type="text" name="fullname" id="fullname" required/>
-            </label></br></br>
+            </label></br>
             <label>Birthday : 
                 <input type="date" name="birthday" id="birthday" required/>
-            </label></br></br>
+            </label></br>
             <label>Email Address : 
                 <input type="email" name="uemail" id="uemail" required/>
-            </label></br></br>
+            </label></br>
         </fieldset>
-        <fieldset>
+    </br>
+        <fieldset class="rounded">
+            <br>
             <label>Mobile Number : 
                 <input type="text" name="mobile" id="mobile" required/>
-            </label></br></br>
+            </label></br>
             <label>Grade Level : 
                 <select name="glevel" id="glevel" required>
                     <option value="gradeseven">Grade 7</option>
@@ -43,11 +104,11 @@
                     <option value="gradeeleven">Grade 11</option>
                     <option value="gradetwelve">Grade 12</option>
                 </select>
-            </label></br></br>
+            </label></br>
             <label>Intern/Extern : 
                 <input type="radio" name="internorextern" value="Intern" required/> Intern
                 <input type="radio" name="internorextern" value="Extern" required/> Extern
-            </label></br></br>
+            </label></br>
             <label>Your Club of Choice : 
                 <select name="uclub" id="uclub" required>
                     <option value="music">Music</option>
@@ -56,14 +117,16 @@
                     <option value="math">Math</option>
                     <option value="debate">Debate</option>
                 </select>
-            </label></br></br>
-        </fieldset>
+            </label></br>
+        </fieldset class="rounded">
+    </br>
         <label>
             Why do you want to join?
-            <br>
+            <br></br>
       <textarea name="reason" rows="4" cols="40" required></textarea>
     </label><br><br>
         <button type="submit">Submit</button>
         <button type="reset">Reset</button>
+</div>
 
     </form>
