--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
       text-align: center;
       padding: 40px;
     }
+    .rounded div {
+      border-radius: 15px;
+      background-color: #ffffff;
+      padding: 20px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      max-width: 800px;
+      margin: auto;
+    }
 
     h1 {
       margin-bottom: 30px;
