--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="author" content="NOVALES, Emma Tianlan Z.">
   <title>2Q Portfolio - Emma Novales</title>
 
-  <title>My File Hub</title>
+  <title>My Requirements for CS</title>
   <style>
     body {
       background-color: #f4f4f4;
@@ -53,7 +53,6 @@
   </style>
 </head>
 <body>
-
     <h1>My Second to Fourth Quarter Requirements</h1>
   <p>Emma Tianlan Z. Novales</p>
   </br>
@@ -71,8 +70,7 @@
         <a class="file-btn" href="3QPortfolioLiNovales/public/Q3_2GLithiumNovales.html" target="_blank">Second Graded</a>
   </div>
   
-
-  </div>
+</div>
 
 </body>
 </html>
