--- a/3QPortfolioLiNovales/public/Q3_2GLithiumNovales.html
+++ b/3QPortfolioLiNovales/public/Q3_2GLithiumNovales.html
@@ -66,6 +66,14 @@
         border: 1px solid #ccc;
         margin-bottom: 20px;
     }
+    .valid {
+        border-color: rgb(37, 53, 72);
+        background-color: rgb(192, 227, 235);
+    }
+    .invalid {
+        border-color: rgb(130, 60, 60);
+        background-color: rgb(254, 212, 212);
+    }
 </style>
 </head>
 </html>
@@ -77,26 +85,26 @@
         <fieldset class="rounded">
         </br>
             <label>Student ID : 
-                <input type="numeric" name="studentid" id="studentid" required/>
+                <input type="numeric" name="studentid" id="studentid" required onblur="checkBlur(this)"/>
             </label></br>
             <label>Full Name : 
-                <input type="text" name="fullname" id="fullname" required/>
+                <input type="text" name="fullname" id="fullname" required onblur="checkBlur(this)"/>
             </label></br>
             <label>Birthday : 
-                <input type="date" name="birthday" id="birthday" required/>
+                <input type="date" name="birthday" id="birthday" required onblur="checkBlur(this)"/>
             </label></br>
             <label>Email Address : 
-                <input type="email" name="uemail" id="uemail" required/>
+                <input type="email" name="uemail" id="uemail" required onblur="checkBlur(this)"/>
             </label></br>
         </fieldset>
     </br>
         <fieldset class="rounded">
             <br>
             <label>Mobile Number : 
-                <input type="text" name="mobile" id="mobile" required/>
+                <input type="text" name="mobile" id="mobile" required onblur="checkBlur(this)"/>
             </label></br>
             <label>Grade Level : 
-                <select name="glevel" id="glevel" required>
+                <select name="glevel" id="glevel" required onblur="checkBlur(this)">
                     <option value="gradeseven">Grade 7</option>
                     <option value="gradeeight">Grade 8</option>
                     <option value="gradenine">Grade 9</option>
@@ -106,11 +114,11 @@
                 </select>
             </label></br>
             <label>Intern/Extern : 
-                <input type="radio" name="internorextern" value="Intern" required/> Intern
-                <input type="radio" name="internorextern" value="Extern" required/> Extern
+                <input type="radio" name="internorextern" value="Intern" required onblur="checkBlur(this)"/> Intern
+                <input type="radio" name="internorextern" value="Extern" required onblur="checkBlur(this)"/> Extern
             </label></br>
             <label>Your Club of Choice : 
-                <select name="uclub" id="uclub" required>
+                <select name="uclub" id="uclub" required onblur="checkBlur(this)">
                     <option value="music">Music</option>
                     <option value="drama">Drama</option>
                     <option value="sports">Sports</option>
@@ -123,10 +131,35 @@
         <label>
             Why do you want to join?
             <br></br>
-      <textarea name="reason" rows="4" cols="40" required></textarea>
+      <textarea name="reason" rows="4" cols="40" required onblur="checkBlur(this)"></textarea>
     </label><br><br>
         <button type="submit">Submit</button>
         <button type="reset">Reset</button>
 </div>
 
     </form>
+
+<script>
+    document.getElementById('dForm').addEventListener('submit', function(event) {
+        if (!confirm('Are you sure you want to submit?')) {
+            event.preventDefault();
+        }
+    });
+    document.getElementById('dForm').addEventListener('reset', function(event) {
+        if (!confirm('Are you sure you want to reset the form?')) {
+            event.preventDefault();
+        }
+    });
+    function checkBlur(input) {
+        if (input.value.trim() === '') {
+            input.classList.remove('valid');
+            input.classList.add('invalid');
+        }
+        else {
+            input.classList.remove('invalid');
+            input.classList.add('valid');
+        }
+    }
+    
+</script>
+</body>
