--- a/3QPortfolioLiNovales/public/Q3_2GLithiumNovales.html
+++ b/3QPortfolioLiNovales/public/Q3_2GLithiumNovales.html
@@ -141,7 +141,7 @@
             </script>
         <button type="reset">Reset</button>
 
-        <button type ="button" onclick="location.href='public/viewSignUps.html'">View Signups</button>
+        <button type ="button" onclick="location.href='viewSignUps.html'">View Signups</button>
 
     </form>
 
