--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
       <p><strong>Third Quarter</strong></p>
   <div class="Q3">
         <a class="file-btn" href="3QPortfolioLiNovales/public/Q3_2GLithiumNovales.html" target="_blank">Second Graded</a>
+        <a class="file-btn" href="3QPortfolioLiNovales/public/Q3_2GLithiumNovales.html" target="_blank">Third Graded</a>
   </div>
   
 </div>
